# context7-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  crates.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: CROSS_PLATFORM.md  HOW_TO_USE.md  context7-llm-rules.md  context7-skill.md
packaging/: README.md
packaging/flatpak/: br.com.daniloaguiar.context7-cli.yaml
packaging/snap/: snapcraft.yaml
src/: api.rs  cli.rs  errors.rs  health.rs  i18n.rs  lib.rs  main.rs  output.rs  platform.rs  storage.rs
tests/: api_integration.rs  cli_integration.rs  health_integration.rs  i18n_integration.rs  storage_integration.rs
